Fix mockup width on firefox

--- a/public/css/smart-reviews-public.scss
+++ b/public/css/smart-reviews-public.scss
@@ -290,7 +290,7 @@ body {
 			img#sr-mockup-image-src {
 				display: block;
 
-				max-width: 100%;
+				width: 100%;
 			}
 		}
 
